added new files

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ Longitude: 4° 16' 53.682" E
 <!-- Map Item (Expandable) -->
 <div class="grid-item map-item">
 <div class="image-container map-container">
-<img src="https://via.placeholder.com/400x300/95A5A6/FFFFFF?text=Map+View" alt="Map">
+<img src="assets/images/map_B.png" alt="Map">
 <label for="map-toggle" class="expand-indicator">▢ Expand</label>
 <label for="map-toggle" class="collapse-indicator">▣ Collapse</label>
 </div>
